$Id$


2003/09/20 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- started debugging several modules (mostly IPC and msgEngine)


2003/09/19 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added cmdlayer to impl/ipc


2003/09/18 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added servicelayer to ipc
- added impl folder for implementations (starting with IPC)


2003/09/17 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- worked on IPC stuff (still untested)
- added serviceLayer


2003/09/14 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added transport layers (socket: TCP and Unix) to IPC module
- started using Sourceforge's cvs_acl script
- started using Sourceforge's syncmail script


2003/09/13 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added "test" folder, started debugging
- fixed some bugs in MsgEngine, Buffer
- added some functions to Db


2003/09/12 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added module "buffer" to base
- added some methods to db module
- MsgEngine now uses the new "buffer" module


2003/09/11 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- created libgwenhyfwar
- added test tool
- fixed db module


2003/09/10 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added module db, worked on xml and msgengine modules, fixed some bugs
  in os code