@@ -37,10 +37,11 @@
 #define GWEN_IPCCONNLAYERCMD_SECSTATE_CLOSED            0
 #define GWEN_IPCCONNLAYERCMD_SECSTATE_CONNECTING        1
 #define GWEN_IPCCONNLAYERCMD_SECSTATE_CONNECTED         2
-#define GWEN_IPCCONNLAYERCMD_SECSTATE_PUBLIC_KEY_EXCHG  3
-#define GWEN_IPCCONNLAYERCMD_SECSTATE_SESSION_KEY_EXCHG 4
-#define GWEN_IPCCONNLAYERCMD_SECSTATE_ESTABLISHED       5
-#define GWEN_IPCCONNLAYERCMD_SECSTATE_CLOSING           6
+#define GWEN_IPCCONNLAYERCMD_SECSTATE_GREETING          3
+#define GWEN_IPCCONNLAYERCMD_SECSTATE_PUBLIC_KEY_EXCHG  4
+#define GWEN_IPCCONNLAYERCMD_SECSTATE_SESSION_KEY_EXCHG 5
+#define GWEN_IPCCONNLAYERCMD_SECSTATE_ESTABLISHED       6
+#define GWEN_IPCCONNLAYERCMD_SECSTATE_CLOSING           7
 
 
 #define GWEN_IPCCONNLAYERCMD_FLAGS_MUST_SIGN  0x0001
